# ArtificialIntelligence

./: README.md
LLMs/ChatbotsWithTransformers/: facebookBlender.py  googleFlanT5.py
llmchatbots/: README.md  main.py  pyproject.toml
llmchatbots/src/chatbots_with_transformers/: facebook_blender.py  google_flan_t5.py
nlpdataloader/: LICENSE  README.md  pyproject.toml
nlpdataloader/src/: nlp_data_loader.py
nlpdataloader/src/data_loaders/: franch_sorted_data_loader.py  nlp_data_loader.py
