[project]
name = "llmchatbots"
version = "0.0.1"
authors = [
  { name = "Paulo Jânio", email = "paulo.janio1291@gmail.com" },
]
description = "Just a simple practice project to learn about LLMs and project structure."
readme = "README.md"
requires-python = ">=3.10.12"
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = [
  "torch==2.7.1",
  "transformers==4.53.1"
]

[project.urls]
Homepage = "https://github.com/xantanio/ArtificialIntelligence/llmchatbots"