[project]
name = "nlpdataloader"
version = "0.0.1"
authors = [
  { name = "Paulo Jânio", email = "paulo.janio1291@gmail.com" },
]
description = "Just a simple practice project to learn about data loaders."
readme = "README.md"
requires-python = ">=3.10.12"
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = [
  "torch==2.2.2",
  "torchtext==0.17.2",
  "torchdata==0.7.1",
  "spacy==3.7.2",
  "pandas==2.2.2",
  "numpy==1.26.4",
  "scikit-learn==1.7.0",
  "sentencepiece==0.2.0",
  "nltk==3.9.1",
  "transformers==4.42.1"
]

[project.urls]
Homepage = "https://github.com/xantanio/ArtificialIntelligence/nlpdataloader"